<resources>
    <string name="app_name">K-HackaThon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_text">울산광역시 무거동</string>
    <string name="check_list">Check list</string>
    <string name="banner_text_view">부동산 거래 시</string>
    <string name="banner_text_view_2">유의사항</string>
    <string name="banner_text_view_3">살펴볼까요?</string>
    <string name="shortcut">바로가기</string>
    <string name="category_title">인기매물</string>
    <string name="category_contents">인기있는 복층매물</string>
    <string name="total_struct">전체 매물</string>
    <string name="label">복층</string>
    <string name="label_2">적은 월세</string>
    <string name="label_3">조용함</string>
    <string name="label_4">벌레 없음</string>
    <string name="label_5">술약속</string>
    <string name="building_name">라임 빌라</string>
    <string name="building_room_count">원룸</string>
    <string name="live_period">3개월</string>
    <string name="deposit_label_text">보증금</string>
    <string name="deposit_price">100만</string>
    <string name="monthly_rent_label_text">월세</string>
    <string name="monthly_rent_price">40만</string>
    <string name="management_amount_label_text">관리금</string>
    <string name="management_amount_price">10만원</string>
    <string name="floor_space_number">13</string>
    <string name="floor_space_number_label_text">평</string>
    <string name="building_addr">울산 남구 무거동 대학로 23번길 12</string>
    <string name="user_name">김철수</string>
    <string name="user_receive_chat">안녕하세요 원룸 관련 문의 드립니다. 월세와 보증금 관련해서</string>
    <string name="chat_receive_time">오후 9:36</string>
    <string name="chat_receive_count_text">4</string>
    <string name="location_si_gu">울산광역시 남구</string>
    <string name="structure_register_header_text">매물등록</string>
    <string name="structure_register_picture_upload_js">방 사진 업로드</string>
    <string name="structure_register_picture_upload_max_js">최대 10장 업로드 가능합니다</string>
    <string name="structure_register_address_tv_js">주소</string>
    <string name="address_search_btn_js">주소찾기</string>
    <string name="address_detail_hint">상세주소를 입력해 주세요</string>
    <string name="structure_register_monthly_cost_tv_js">월세</string>
    <string name="monthly_cost_hint">월세를 입력해 주세요</string>
    <string name="structure_register_deposit_tv_js">보증금</string>
    <string name="deposit_hint">보증금을 입력해 주세요</string>
    <string name="structure_register_management_amount_tv_js">관리비</string>
    <string name="management_amount_hint">관리비를 입력해 주세요</string>
    <string name="structure_register_floor_space_tv_js">면적</string>
    <string name="floor_space_hint">면적을 적어주세요</string>
    <string name="structure_register_floor_number_tv_js">층수</string>
    <string name="floor_number_hint">해당 매물의 층수를 적어주세요</string>
    <string name="structure_register_floor_number_max_tv_js">건물 층수</string>
    <string name="floor_number_max_hint">건물의 층수를 적어주세요</string>
    <string name="structure_register_inner_option_tv_js">내부 옵션</string>
    <string name="structure_register_outer_option_tv_js">외부 옵션</string>
    <string name="structure_register_description_tv_js">매물 설명</string>
    <string name="description_hint">방에 대한 설명을 적어주세요</string>
    <string name="option_text_1">에어컨</string>
    <string name="option_text_2">가스레인지</string>
    <string name="option_text_3">냉장고</string>
    <string name="option_text_4">도어락</string>
    <string name="option_text_5">세탁기</string>
    <string name="option_text_6">전자레인지</string>
    <string name="option_text_7">TV</string>
    <string name="option_text_8">책상</string>
    <string name="option_text_9">침대</string>
    <string name="option_text_10">싱크대</string>
    <string name="option_text_11">신발장</string>
    <string name="option_text_12">옷장</string>
    <string name="option_text_13">소파</string>
    <string name="option_text_14">커튼</string>
    <string name="structure_register_btn_js">등록하기</string>
</resources>