<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_pager_frame_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager_frame_card_view"
        app:layout_constraintEnd_toEndOf="@+id/view_pager_frame_card_view"
        app:layout_constraintStart_toStartOf="@+id/view_pager_frame_card_view"
        app:layout_constraintTop_toTopOf="@+id/view_pager_frame_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cardview_img"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scaleType="fitXY"
                android:src="@drawable/cardview_dummy_image" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardview_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/validation_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/cardview_contents"
                    app:layout_constraintTop_toTopOf="@+id/cardview_contents">

                    <ImageView
                        android:id="@+id/img_mark_valid"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_validation_star"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:src="@drawable/ic_home_mark_white"
                        app:layout_constraintBottom_toBottomOf="@+id/img_mark_valid"
                        app:layout_constraintEnd_toEndOf="@+id/img_mark_valid"
                        app:layout_constraintStart_toStartOf="@+id/img_mark_valid"
                        app:layout_constraintTop_toTopOf="@+id/img_mark_valid" />

                    <TextView
                        android:id="@+id/building_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/building_name"
                        android:fontFamily="@font/pretendard_regular"
                        android:textAppearance="@style/building_name"
                        app:layout_constraintBottom_toBottomOf="@+id/img_mark_valid"
                        app:layout_constraintStart_toEndOf="@+id/img_mark_valid"
                        app:layout_constraintTop_toTopOf="@+id/img_mark_valid" />

                    <TextView
                        android:id="@+id/building_room_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/building_room_count"
                        android:fontFamily="@font/pretendard_regular"
                        android:textAppearance="@style/building_room_count"
                        app:layout_constraintBottom_toBottomOf="@+id/building_name"
                        app:layout_constraintStart_toEndOf="@+id/building_name"
                        app:layout_constraintTop_toTopOf="@+id/building_name" />

                    <View
                        android:id="@+id/ellipse_30"
                        android:layout_width="2dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="6dp"
                        android:background="#B5B6BD"
                        app:layout_constraintBottom_toBottomOf="@+id/building_room_count"
                        app:layout_constraintStart_toEndOf="@+id/building_room_count"
                        app:layout_constraintTop_toTopOf="@+id/building_room_count" />

                    <TextView
                        android:id="@+id/live_period"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/live_period"
                        android:fontFamily="@font/pretendard_light"
                        android:textAppearance="@style/live_period"
                        app:layout_constraintBottom_toBottomOf="@+id/building_room_count"
                        app:layout_constraintStart_toEndOf="@+id/ellipse_30"
                        app:layout_constraintTop_toTopOf="@+id/building_room_count" />

                    <TextView
                        android:id="@+id/deposit_label_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/deposit_label_text"
                        android:fontFamily="@font/pretendard_regular"
                        android:textAppearance="@style/deposit_label"
                        app:layout_constraintStart_toStartOf="@+id/img_mark_valid"
                        app:layout_constraintTop_toBottomOf="@+id/img_mark_valid" />

                    <TextView
                        android:id="@+id/deposit_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/deposit_price"
                        android:fontFamily="@font/pretendard_light"
                        android:textAppearance="@style/deposit_label"
                        app:layout_constraintBottom_toBottomOf="@+id/deposit_label_text"
                        app:layout_constraintStart_toEndOf="@+id/deposit_label_text"
                        app:layout_constraintTop_toTopOf="@+id/deposit_label_text" />

                    <View
                        android:id="@+id/ellipse_31"
                        android:layout_width="2dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="6dp"
                        android:background="#B5B6BD"
                        app:layout_constraintBottom_toBottomOf="@id/deposit_price"
                        app:layout_constraintStart_toEndOf="@id/deposit_price"
                        app:layout_constraintTop_toTopOf="@id/deposit_price" />

                    <TextView
                        android:id="@+id/monthly_rent_label_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/monthly_rent_label_text"
                        android:fontFamily="@font/pretendard_light"
                        android:textAppearance="@style/monthly_rent_label"
                        app:layout_constraintBottom_toBottomOf="@+id/ellipse_31"
                        app:layout_constraintStart_toEndOf="@+id/ellipse_31"
                        app:layout_constraintTop_toTopOf="@+id/ellipse_31" />

                    <TextView
                        android:id="@+id/monthly_rent_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/monthly_rent_price"
                        android:fontFamily="@font/pretendard_light"
                        android:textAppearance="@style/monthly_rent_label"
                        app:layout_constraintBottom_toBottomOf="@+id/monthly_rent_label_text"
                        app:layout_constraintStart_toEndOf="@+id/monthly_rent_label_text"
                        app:layout_constraintTop_toTopOf="@+id/monthly_rent_label_text" />

                    <View
                        android:id="@+id/ellipse_32"
                        android:layout_width="2dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="6dp"
                        android:background="#B5B6BD"
                        app:layout_constraintBottom_toBottomOf="@+id/monthly_rent_price"
                        app:layout_constraintStart_toEndOf="@+id/monthly_rent_price"
                        app:layout_constraintTop_toTopOf="@+id/monthly_rent_price" />

                    <TextView
                        android:id="@+id/management_amount_label_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/management_amount_label_text"
                        android:fontFamily="@font/pretendard_light"
                        android:textAppearance="@style/management_amount_label"
                        app:layout_constraintBottom_toBottomOf="@+id/ellipse_32"
                        app:layout_constraintStart_toEndOf="@+id/ellipse_32"
                        app:layout_constraintTop_toTopOf="@+id/ellipse_32" />

                    <TextView
                        android:id="@+id/management_amount_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/management_amount_price"
                        android:fontFamily="@font/pretendard_light"
                        android:textAppearance="@style/management_amount_label"
                        app:layout_constraintBottom_toBottomOf="@+id/management_amount_label_text"
                        app:layout_constraintStart_toEndOf="@+id/management_amount_label_text"
                        app:layout_constraintTop_toTopOf="@+id/management_amount_label_text" />

                    <View
                        android:id="@+id/ellipse_33"
                        android:layout_width="2dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="6dp"
                        android:background="#B5B6BD"
                        app:layout_constraintBottom_toBottomOf="@+id/management_amount_price"
                        app:layout_constraintStart_toEndOf="@+id/management_amount_price"
                        app:layout_constraintTop_toTopOf="@+id/management_amount_price" />

                    <TextView
                        android:id="@+id/floor_space_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/floor_space_number"
                        android:fontFamily="@font/pretendard_light"
                        android:textAppearance="@style/floor_space_number_label"
                        app:layout_constraintBottom_toBottomOf="@+id/ellipse_33"
                        app:layout_constraintStart_toEndOf="@+id/ellipse_33"
                        app:layout_constraintTop_toTopOf="@+id/ellipse_33" />

                    <TextView
                        android:id="@+id/floor_space_number_label_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/floor_space_number_label_text"
                        android:fontFamily="@font/pretendard_light"
                        android:textAppearance="@style/floor_space_number_label"
                        app:layout_constraintBottom_toBottomOf="@+id/floor_space_number"
                        app:layout_constraintStart_toEndOf="@+id/floor_space_number"
                        app:layout_constraintTop_toTopOf="@+id/floor_space_number" />
                    <TextView
                        android:id="@+id/building_addr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pretendard_medium"
                        android:text="@string/building_addr"
                        android:textAppearance="@style/building_addr"
                        app:layout_constraintTop_toBottomOf="@+id/deposit_label_text"
                        app:layout_constraintStart_toStartOf="@+id/deposit_label_text"
                        android:layout_marginTop="6dp"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>