<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/profile1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/is_valid_user"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_valid_mark"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintBottom_toBottomOf="@+id/profile"/>

    
    <ImageView
        android:id="@+id/chat_building_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/chat_building_image"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:layout_constraintBottom_toBottomOf="@id/profile"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_contents_info"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:layout_constraintBottom_toBottomOf="@id/profile"
        app:layout_constraintStart_toEndOf="@id/profile"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintEnd_toStartOf="@id/chat_building_image">
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAppearance="@style/user_name"
            android:fontFamily="@font/pretendard_medium"
            app:layout_constraintTop_toTopOf="@+id/chat_contents_info"
            app:layout_constraintStart_toStartOf="@id/chat_contents_info"/>
        <TextView
            android:id="@+id/chat_receive_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_receive_time"
            android:textAppearance="@style/chat_receive_time"
            android:fontFamily="@font/pretendard_regular"
            app:layout_constraintTop_toTopOf="@+id/user_name"
            app:layout_constraintBottom_toBottomOf="@id/user_name"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/user_receive_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/pretendard_light"
            android:maxLines="1"
            android:layout_marginTop="2dp"
            android:text="@string/user_receive_chat"
            android:textAppearance="@style/user_receive_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chat_receive_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <ImageView
            android:id="@+id/chat_receive_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/one_digit"
            app:layout_constraintBottom_toBottomOf="@+id/user_receive_chat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_receive_chat" />
        <TextView
            android:id="@+id/chat_receive_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_receive_count_text"
            android:textAppearance="@style/chat_receive_count_text"
            app:layout_constraintTop_toTopOf="@+id/chat_receive_count"
            app:layout_constraintStart_toStartOf="@+id/chat_receive_count"
            app:layout_constraintEnd_toEndOf="@+id/chat_receive_count"
            app:layout_constraintBottom_toBottomOf="@+id/chat_receive_count"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>